Finished exercise 3 and fixed exercise 1

--- a/customerFrontend.html
+++ b/customerFrontend.html
@@ -1,14 +1,14 @@
 <html>
 <head>
   <link href ="style.css" rel="stylesheet" type="text/css" />
-  <script language="javascript" type="text/javascript" src="formChecker.js"></script>
+  <script src="formChecker.js"></script>
   <title>Lab 4 Exercise 3</title>
 </head>
 <body>
   <h3><div>Metal Store
     </div></h3>
 
-    <form action="customerBackend.php" method="post" onsubmit="return isValid()">
+    <form action="customerBackend.php" method="post" onsubmit="return check()">
 
       <div class="identity"><br>
         Username:
